<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PlayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/play_title"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center"
            android:text="@string/play_title"
            android:textSize="36sp" />

        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="372dp"
            android:columnWidth="@dimen/cell_size"
            android:gravity="center"
            android:horizontalSpacing="0dp"
            android:numColumns="8"
            android:verticalSpacing="0dp">

        </GridView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/undo_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="handleUndoButton"
                android:text="@string/undo_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.993"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/draw_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="handleDrawButton"
                android:text="@string/draw_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resign_button"
                app:layout_constraintVertical_bias="0.143" />

            <Button
                android:id="@+id/resign_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="handleResignButton"
                android:text="@string/resign_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/random_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleRandomButton"
                android:text="@string/random_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/undo_button"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/undo_button"
                app:layout_constraintVertical_bias="0.153" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>