<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ReplayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/replay_title"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center"
            android:text="@string/play_title"
            android:textSize="36sp" />

        <GridView
            android:id="@+id/gridViewReplay"
            android:layout_width="match_parent"
            android:layout_height="372dp"
            android:columnWidth="@dimen/cell_size"
            android:gravity="center"
            android:horizontalSpacing="0dp"
            android:numColumns="8"
            android:verticalSpacing="0dp">

        </GridView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/next_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/next_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.993"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/prev_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/prev_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>